fixed images not showing

--- a/assets/style.css
+++ b/assets/style.css
@@ -118,7 +118,7 @@ h1 {
   height: 500px;
   width: 100%;
   margin-top: 25px;
-  background-image: url("../assets/devsoc-work.jpeg");
+  background-image: url("bcz25.github.io/Myportfolio/assets/devsoc-work.jpeg");
   background-size: cover;
   background-position: center;
   margin-bottom: 25px;
@@ -145,7 +145,7 @@ h1 {
  width: 45%;
  margin-left: 25px;
  background-color: #d4d7da;
- background-image: url("../assets/Ai-trainer.jpeg");
+ background-image: url("bcz25.github.io/Myportfolio/assets/Ai-trainer.jpeg");
  background-size: contain;
  background-blend-mode: multiply;
  background-position: center;
@@ -162,7 +162,7 @@ h1 {
   margin-right: 25px;
   margin-bottom: 50px;
   background-color: #d4d7da;
-  background-image: url("../assets/slope-tracker.jpeg");
+  background-image: url("bcz25.github.io/Myportfolio/assets/slope-tracker.jpeg");
   background-size: contain;
   background-blend-mode: multiply;
   background-position: center;
